fixed the footer overlap issue

--- a/client/src/components/Footer/footer.scss
+++ b/client/src/components/Footer/footer.scss
@@ -43,7 +43,7 @@ footer {
 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 5vh 5vh 5vh 5vh;
+    grid-template-rows: 40px 40px 40px 40px;
 
     h4 {
       grid-column: 1/3;
@@ -55,7 +55,7 @@ footer {
       font-size: 12px;
       grid-column: 1/3;
       grid-row: 2/3;
-
+      
       i {
         display: flex;
         justify-content: center;
@@ -73,12 +73,14 @@ footer {
       grid-column: 1/2;
       grid-row: 3/4;
       justify-self: end;
+      align-self: end;
     }
 
     .c-a {
       grid-column: 2/3;
       grid-row: 3/4;
       justify-self: start;
+      align-self: end;
     }
     
     p {
